tests/fixtures/invalid/max_bytes_set.py
# Cannot call max() with Bytes, Set[int]
x = max(b"hello", {1, 2, 3})
